fix: ensure the project uses Java 17 as a baseline and not 21