@@ -65,7 +65,7 @@ public class DelegateShimTest {
         MethodSpec constructor = Env.findConstructor(output, "me.escoffier.test.MyInterface");
         assertThat(constructor.name()).isEqualTo("<init>");
         assertThat(constructor.parameters()).hasSize(1);
-        assertThat(constructor.parameters().getFirst().type())
+        assertThat(constructor.parameters().get(0).type())
                 .isEqualTo(ClassName.get("me.escoffier.test", "MyInterface"));
         assertThat(constructor.modifiers()).contains(Modifier.PUBLIC);
         assertThat(constructor.code().toString()).contains("this.delegate = delegate;")
@@ -128,7 +128,7 @@ public class DelegateShimTest {
         MethodSpec constructor = Env.findConstructor(output, "me.escoffier.test.MyInterface<X>");
         assertThat(constructor.name()).isEqualTo("<init>");
         assertThat(constructor.parameters()).hasSize(1);
-        assertThat(constructor.parameters().getFirst().type()).isEqualTo(expectedDelegateType);
+        assertThat(constructor.parameters().get(0).type()).isEqualTo(expectedDelegateType);
         assertThat(constructor.modifiers()).contains(Modifier.PUBLIC);
         assertThat(constructor.code().toString())
                 .contains("this.delegate = delegate;")
